# Nyapix-API

./: .env.example  README.md  docker-compose.yml  package-lock.json
Back/: Actions.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
Back/src/: decorators.py  login_management.py  logs.py  main.py
Back/src/db_management/: albums.py  authors.py  characters.py  connection.py  content.py  login.py  setup.py  sources.py  stream.py  tags.py  users.py  video.py
Back/src/db_management/content/: authors.py  content.py  tags.py
Back/src/db_management/users/: history.py  users.py
Back/src/decorators/: users_type.py
Back/src/endpoints/: admin.py  albums.py  authors.py  characters.py  content.py  login.py  sources.py  tags.py  user_info.py  users.py
Back/src/endpoints/authors/: management.py
Back/src/endpoints/content/: management.py
Back/src/endpoints/tags/: management.py
Back/src/endpoints/users/: me.py  users.py
Back/src/models/: basic.py  content.py  general_responses.py  login.py  users.py  users_history.py
Back/src/utility/: logging.py  media.py  token.py  users.py  video.py
DB/: schema.sql
Front/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json
Front/src/: App.vue  main.ts
Front/src/components/: ErrorPopup.vue  NavBar.vue  NyapixLogo.vue
Front/src/router/: HomeView.vue  index.ts
Front/src/views/: AdminView.vue  AlbumView.vue  ContentView.vue  HomeView.vue  NewContentView.vue  ProfileView.vue  (+3 more)
app/: .pdm-python  Dockerfile  pyproject.toml
app/src/: db_gestion.py  main.py  token_gestion.py
(+15 files in other folders)
