[project]
name = "Nyapix"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Maniko", email = "carotte317@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn>=0.32.0",
    "psycopg2>=2.9.10",
    "typing>=3.7.4.3",
    "bcrypt>=4.2.1",
    "pyjwt>=2.10.0",
    "multipart>=1.2.1",
    "python-multipart>=0.0.20",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
