[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Maniko", email = "louis.chabrerie@innowide.fr"},
]
dependencies = [
    "python-dotenv",
    "requests",
    "uvicorn>=0.27.1",
    "fastapi>=0.109.2",
    "pytz>=2024.1",
    "opencv-python>=4.10.0.84",
    "Col>=0.0.1",
    "numpy>=2.0.0",
    "python-multipart>=0.0.9",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
